--- a/src/BlazingPizza.Client/Shared/MainLayout.razor
+++ b/src/BlazingPizza.Client/Shared/MainLayout.razor
@@ -2,12 +2,12 @@
 
 <div class="top-bar">
     <a class="logo" href="">
-        <img src="img/logo.svg" />
+        <img src="img/portfolio/logo1.png" />
     </a>
 
     <NavLink href="" class="nav-tab" Match="NavLinkMatch.All">
-        <img src="img/pizza-slice.svg" />
-        <div>Get Pizza</div>
+        <img src="img/portfolio/wood1.jpg" />
+        <div>Get Wood!</div>
     </NavLink>
 
     <AuthorizeView>
