--- a/src/BlazingPizza.Client/wwwroot/css/site.css
+++ b/src/BlazingPizza.Client/wwwroot/css/site.css
@@ -21,12 +21,9 @@ form {
 
 .top-bar {
     height: 5rem;
-    background-color: rgb(192,0,0);
-    background-image: linear-gradient(rgba(0,0,0,0.3) 0%, rgba(0,0,0,0.25) 25%, rgba(0,0,0,0) 70%);
     display: flex;
     align-items: stretch;
     color: white;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.4);
     padding: 0 3rem;
     position: fixed;
     top: 0;
@@ -54,7 +51,6 @@ form {
 .main {
     flex-grow: 1;
     overflow-y: auto;
-    background: linear-gradient(rgba(0,0,0,0) 40%, rgba(0,0,0,0.4) 80%);
     padding: 1.5rem !important;
 }
 
@@ -199,7 +195,7 @@ form {
     }
 
 .price::before {
-    content: '£';
+    content: '$';
     font-weight: 300;
     font-size: 1.2rem;
     margin-right: 0.2rem;
@@ -241,9 +237,9 @@ form {
     padding: 0 1.5rem;
 }
 
-.order-total.hidden {
-    transform: translate3d(0, 4rem, 0);
-}
+    .order-total.hidden {
+        transform: translate3d(0, 4rem, 0);
+    }
 
     .order-total .total-price {
         font-weight: 700;
@@ -251,7 +247,7 @@ form {
     }
 
         .order-total .total-price::before {
-            content: '£';
+            content: '$';
             font-weight: 300;
             margin: 0 0.1rem 0 0.4rem;
         }
@@ -308,7 +304,7 @@ form {
 }
 
     .item-price::before {
-        content: '£';
+        content: '$';
         font-weight: 100;
         margin-right: 0.3rem;
     }
@@ -411,27 +407,27 @@ form {
     padding: 0 1rem;
 }
 
-    .dialog-body > div {
-        display: flex;
-        margin-top: 1rem;
-        align-items: center;
-    }
+.dialog-body > div {
+    display: flex;
+    margin-top: 1rem;
+    align-items: center;
+}
 
-    .dialog-body label {
-        text-align: right;
-        width: 200px;
-        margin: 0 1.5rem;
-    }
+.dialog-body label {
+    text-align: right;
+    width: 200px;
+    margin: 0 1.5rem;
+}
 
-    .dialog-body input, .dialog-body select {
-        flex-grow: 1;
-        width: unset;
-    }
+.dialog-body input, .dialog-body select {
+    flex-grow: 1;
+    width: unset;
+}
 
-    .dialog-body .size-label {
-        min-width: 110px;
-        text-align: right;
-    }
+.dialog-body .size-label {
+    min-width: 110px;
+    text-align: right;
+}
 
 .dialog .toppings {
     text-align: center;
@@ -454,9 +450,9 @@ form {
     font-size: 0.8rem;
 }
 
-.dialog .topping-price::before {
-    content: '£';
-}
+    .dialog .topping-price::before {
+        content: '$';
+    }
 
 .delete-topping {
     background: none;
@@ -466,9 +462,9 @@ form {
     cursor: pointer;
 }
 
-.delete-topping:hover {
-    color: yellow;
-}
+    .delete-topping:hover {
+        color: yellow;
+    }
 
 .form-message {
     padding: 0.5rem;
@@ -654,6 +650,7 @@ input[type=range] {
 .checkout-cols {
     display: flex;
 }
+
     .checkout-cols h4 {
         margin-bottom: 1.5rem;
     }
