--- a/src/BlazingPizza.Client/Shared/OrderReview.razor
+++ b/src/BlazingPizza.Client/Shared/OrderReview.razor
@@ -4,7 +4,7 @@
         <strong>
             @(pizza.Size)"
             @pizza.Special.Name
-            (£@pizza.GetFormattedTotalPrice())
+            ($@pizza.GetFormattedTotalPrice())
         </strong>
     </p>
 
@@ -19,7 +19,7 @@
 <p>
     <strong>
         Total price:
-        £@Order.GetFormattedTotalPrice()
+        $@Order.GetFormattedTotalPrice()
     </strong>
 </p>
 
