--- a/src/BlazingPizza.Client/Pages/Index.razor
+++ b/src/BlazingPizza.Client/Pages/Index.razor
@@ -7,11 +7,12 @@
     List<PizzaSpecial> specials;
     Pizza configuringPizza;
     bool showingConfigureDialog;
-    // Order order = new Order(); // new 
+    Order order = new Order(); // new 
 
     List<WoodProduct> portfolio;
     WoodProduct configuringProduct;
     bool showingConfigureProductDialog;
+    ProductOrder productOrder = new ProductOrder();
 
     protected override async Task OnInitializedAsync()
     {
@@ -33,9 +34,35 @@
         showingConfigureDialog = true;
     }
 
+    void CancelConfigurePizzaDialog()
+    {
+        configuringPizza = null;
+        showingConfigureDialog = false;
+    }
+
+    void ConfirmConfigurePizzaDialog()
+    {
+        order.Pizzas.Add(configuringPizza);
+        configuringPizza = null;
+        showingConfigureDialog = false;
+    }
+
     // end pizza functions //
 
     // start wood product functions //
+
+    void CancelConfigureProductDialog()
+    {
+        configuringProduct = null;
+        showingConfigureProductDialog = false;
+    }
+
+    void ConfirmConfigureProductDialog()
+    {
+        productOrder.WoodProducts.Add(configuringProduct);
+        configuringProduct = null;
+        showingConfigureDialog = false;
+    }
 
     void ShowConfigureProductDialog(WoodProduct product)
     {
@@ -51,16 +78,27 @@
 
         showingConfigureProductDialog = true;
     }
+
+    void RemoveConfiguredPizza(Pizza pizza)
+    {
+        order.Pizzas.Remove(pizza);
+    }
+
+    async Task PlaceOrder()
+    {
+        await HttpClient.PostAsJsonAsync("orders", order);
+        order = new Order();
+    }
 }
 
 @if (showingConfigureDialog)
 {
-    <ConfigurePizzaDialog Pizza="configuringPizza" />
+    <ConfigurePizzaDialog Pizza="configuringPizza" OnCancel="CancelConfigurePizzaDialog" OnConfirm="ConfirmConfigurePizzaDialog" />
 }
 
 @if (showingConfigureProductDialog)
 {
-    <ConfigureWoodProduct WoodProduct="configuringProduct" />
+    <ConfigureWoodProduct WoodProduct="configuringProduct" OnCancelWood="CancelConfigureProductDialog" OnConfirmWood="ConfirmConfigureProductDialog"/>
 }
 
 
@@ -96,4 +134,29 @@
             }
         }
     </ul>
+</div>
+<div class="sidebar">
+    @if (order.Pizzas.Any())
+    {
+        <div class="order-contents">
+            <h2>Your order</h2>
+
+            @foreach (var configuredPizza in order.Pizzas)
+            {
+                <ConfiguredPizzaItem Pizza="configuredPizza" OnRemoved="@(() => RemoveConfiguredPizza(configuredPizza))" />
+            }
+        </div>
+    }
+    else
+    {
+        <div class="empty-cart">Choose a pizza<br>to get started</div>
+    }
+
+    <div class="order-total @(order.Pizzas.Any() ? "" : "hidden")">
+        Total:
+        <span class="total-price">@order.GetFormattedTotalPrice()</span>
+        <button class="btn btn-warning" disabled="@(order.Pizzas.Count == 0)" @onclick="PlaceOrder">
+            Order >
+        </button>
+    </div>
 </div>
