--- a/src/BlazingPizza.Client/Shared/ConfigurePizzaDialog.razor
+++ b/src/BlazingPizza.Client/Shared/ConfigurePizzaDialog.razor
@@ -3,6 +3,8 @@
 @code {
     List<Topping> toppings;
     [Parameter] public Pizza Pizza { get; set; }
+    [Parameter] public EventCallback OnCancel { get; set; }
+    [Parameter] public EventCallback OnConfirm { get; set; }
 
     protected async override Task OnInitializedAsync()
     {
@@ -81,11 +83,11 @@
             </div>
         </form>
         <div class="dialog-buttons">
-            <button class="btn btn-secondary mr-auto">Cancel</button>
+            <button class="btn btn-secondary mr-auto" @onclick="OnCancel">Cancel</button>
             <span class="mr-center">
                 Price: <span class="price">@(Pizza.GetFormattedTotalPrice())</span>
             </span>
-            <button class="btn btn-success ml-auto">Order ></button>
+            <button class="btn btn-success ml-auto" @onclick="OnConfirm">Order ></button>
         </div>
     </div>
 </div>
